OCE-420 Fix for pagination covering the popup

--- a/ui/oce/corruption-risk/style.less
+++ b/ui/oce/corruption-risk/style.less
@@ -497,6 +497,7 @@
         padding: 15px;
         height: auto;
         display: none;
+        z-index: 10;
         .and{
           text-transform: uppercase;
           color: #387ab2;
